Fixed tabbing in index and style file

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 @import url(https://fonts.googleapis.com/css?family=Indie+Flower);
 
 
-	.header #main_heading{
+.header #main_heading{
 	display: inline-block;
 	position:relative;
 	font-family: 'Frijole', cursive;
@@ -13,45 +13,41 @@
 	font-size:50px;
 	padding-bottom: 10px;
 	padding:5px 20px 25px 10px ;
-	
 	}
-	#heading_button{
+	
+#heading_button{
 	display: inline-block;
 	float: right;
 	border-left: 2px solid grey;
-
 	border-color: white;
 	font-family: 'Frijole', cursive;
 	cursor: url("pictures/paw_icon.png"), auto;
-	
 	}
-	.buttons{
+.buttons{
 		border: 2px solid grey;
 	padding: 1em;
 	/*border-radius: 25px;*/
 	font-family: 'Yantramanav', serif;
 	cursor: url("pictures/paw_icon.png"), auto;
-	
 	}
-	#button_subscribe{
+#button_subscribe{
 	background-color: grey;
 	color:white;
 	border-radius: 25px;
-	
-	}
-	.header img{
+}
+.header img{
 	display: inline-block;
 	float:left;
 	max-width:10 px;
 	max-height: 10 px;
-	}
-	body {
+}
+body {
 	background-color: #d3a579;
 	margin: 0 15%;
 	background-repeat: no-repeat;
     background-attachment: fixed;	
-	}
-	#menu {
+}
+#menu {
 	font-family: 'Frijole', cursive;
     list-style-type: none;
     margin: 0 0 0.5em 0;
@@ -60,52 +56,39 @@
     overflow: hidden;
     background-color: grey;
 	text-align: center;
-	
-
-    }
-		
-	li {
-		float: left;
-		display: inline-block;
-	}
-
-
-
-	li a {
-		display: inline-block;
-		color: white;
-		text-align: center;
-		padding: 14px 16px;
-	
-	}
-
-	li a:hover, #heading_button:hover {
-		background-color: #e6cbb2;
-	}
-	a:hover{
+}
+li {
+	float: left;
+	display: inline-block;
+}
+li a {
+	display: inline-block;
+	color: white;
+	text-align: center;
+	padding: 14px 16px;
+}
+li a:hover, #heading_button:hover {
+	background-color: #e6cbb2;
+}
+a:hover{
 	cursor: url("pictures/paw_icon.png"), auto;
-	}
-
-
-	.fadein img {   
+}
+.fadein img {   
 	position:absolute;
 	left:0;
 	top:0; 
-	height:500px; width:100%; }
-
-	.container{
+	height:500px; width:100%; 
+}
+.container{
 	position: relative;
-	}
-
-	.fadein { height:500px; width:100%; 
+}
+.fadein { 
+	height:500px; width:100%; 
 	background-color: grey;
 	position: relative;
 	float: center;
-	}
-
-
-
-	#wrapper{
+}
+#wrapper{
 	font-family: 'Yantramanav', serif;
 	background-color: #e6cbb2;
 	max-width: 500px;
@@ -115,17 +98,15 @@
 	padding: 5em;
 	margin-top: 5em;
 	margin-bottom: 5em;
-	}
-
-	#email{
+}
+#email{
 	border-radius: 25px;
 	width: 1000 px;
 	height: 2em;
 	border: 2px solid grey;
 	margin: 5px;
-	}
-	 
-	input,input::-webkit-input-placeholder {
-	 font-size: 30 em;
-		line-height: 2;
-	}
+}
+input,input::-webkit-input-placeholder {
+	font-size: 30 em;
+	line-height: 2;
+}
