--- a/style.css
+++ b/style.css
@@ -14,6 +14,9 @@
 	padding-bottom: 10px;
 	padding:5px 20px 25px 10px ;
 	}
+.header{
+	margin: 0 25%;
+}
 	
 #heading_button{
 	display: inline-block;
@@ -43,7 +46,7 @@
 }
 body {
 	background-color: #d3a579;
-	margin: 0 15%;
+	margin: 0 0 15% 0;
 	background-repeat: no-repeat;
     background-attachment: fixed;	
 }
@@ -58,7 +61,7 @@ body {
 	text-align: center;
 }
 li {
-	float: left;
+	float: center;
 	display: inline-block;
 }
 li a {
@@ -73,7 +76,7 @@ li a:hover, #heading_button:hover {
 a:hover{
 	cursor: url("pictures/paw_icon.png"), auto;
 }
-.fadein img {   
+.image-gallery img {   
 	position:absolute;
 	left:0;
 	top:0; 
@@ -82,7 +85,7 @@ a:hover{
 .container{
 	position: relative;
 }
-.fadein { 
+.image-gallery { 
 	height:500px; width:100%; 
 	background-color: grey;
 	position: relative;
@@ -97,7 +100,15 @@ a:hover{
 	margin-right: auto;
 	padding: 5em;
 	margin-top: 5em;
-	margin-bottom: 5em;
+	margin-bottom: 0;
+	border-top-right-radius: 7em;
+	border-top-left-radius: 7em;
+	border: 0.5em solid grey;
+}
+#buttom-form{
+	background-color: grey;
+	max-width:100%;
+	height: 100px;
 }
 #email{
 	border-radius: 25px;
