--- a/style.css
+++ b/style.css
@@ -5,19 +5,25 @@
 
 
 .header #main_heading{
-	display: inline-block;
+	/*display: inline-block;*/
 	position:relative;
 	font-family: 'Frijole', cursive;
 	text-align: center;
 	color: #505050 ;
-	font-size:50px;
+	font-size:100px;
 	padding-bottom: 10px;
 	padding:5px 20px 25px 10px ;
 	}
 .header{
-	margin: 0 25%;
+	/*margin: 0 25%;*/
+	float: center;
 }
-	
+.header img{
+	/*display: inline-block;
+	float:left;*/
+	max-width:8 px;
+	max-height: 8 px;
+}
 #heading_button{
 	display: inline-block;
 	float: right;
@@ -38,12 +44,7 @@
 	color:white;
 	border-radius: 25px;
 }
-.header img{
-	display: inline-block;
-	float:left;
-	max-width:10 px;
-	max-height: 10 px;
-}
+
 body {
 	background-color: #d3a579;
 	margin: 0 0 15% 0;
@@ -109,6 +110,18 @@ a:hover{
 	background-color: grey;
 	max-width:100%;
 	height: 100px;
+	padding: 10px;
+}
+#buttom-center{
+	border: 0.5em solid #505050;
+	width: 50em;
+	height: 10em;
+	background-color: #e6cbb2;
+	float: center;
+	position: relative;
+	text-align: center;
+	margin: -30px auto -5% auto;
+	border-radius: 7em;
 }
 #email{
 	border-radius: 25px;
